[package]
name = "carddb"
version = "1.0.0"
edition = "2021"
description = "Card database and account metadata merge helper"

[[bin]]
name = "carddb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
